src/modules/Category/index.scss
.category-wrapper {
  padding: 80px 100px;
  position: relative;

  .category-name {
    font-family: Raleway, sans-serif;
    text-transform: capitalize;
    font-size: 42px;
    font-weight: 400;
    line-height: 67px;
    letter-spacing: 0;
    text-align: left;
    color: #1D1F22;

  }

  .products-wrapper {
    display: grid;
    grid-template-columns: repeat(auto-fill, 500px);
    grid-column-gap: 40px;
    grid-row-gap: 103px;
    justify-content: center;

    .product {
      padding: 16px;
      width: 354px;
      height: 411px;
      max-height: 444px;
      cursor: pointer;

      .product-image {
        height: 330px;
        width: 354px;
        display: flex;
        justify-content: center;
        align-items: center;

        img {
          height: 100%;
          width: 100%;
          object-fit: cover;
        }
      }

      .product-name {
        font-family: 'Raleway', sans-serif;
        font-style: normal;
        font-weight: 300;
        font-size: 18px;
        line-height: 160%;
        color: #1D1F22;
        margin: 24px 0 0;
        text-align: start;
      }

      .product-price {
        font-family: 'Raleway', sans-serif;
        font-size: 18px;
        font-weight: 500;
        line-height: 29px;
        letter-spacing: 0;
        text-align: left;
        margin: 0;
      }

      &:hover {
        box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
      }

      &.out-of-stock {
        .product-name, .product-price {
          color: #8D8F9A;
        }

        .product-image {
          img {
            opacity: 0.5;
          }

          span {
            position: absolute;
            font-family: Raleway, sans-serif;
            font-size: 24px;
            font-weight: 400;
            line-height: 38px;
            letter-spacing: 0;
            color: #8D8F9A;
          }
        }
      }
    }
  }
}

